tests/error/array_errors/new_array_wrong_length.py
from guppylang.decorator import guppy
from guppylang.std.builtins import array


@guppy
def main() -> array[int, 2]:
    return array(1, 2, 3)


main.compile()